# Arcana-Lisp

./: .gitignore  Makefile  README.md  _CoqProject  build.sbt  coq.opam  lang-verification.opam
.bsp/: sbt.json
.github/workflows/: test.yml  verification.yml
src/main/coq/arcana/justice/: helper.v  syntax.v  verification.v
src/main/scala/arcana/death/: Repl.scala  ReplException.scala  ReplOptionParser.scala  ReplOptionsParser.scala
src/main/scala/arcana/emperor/: ASTNodes.scala  Parser.scala  ParserOptions.scala
src/main/scala/arcana/empress/: Lexer.scala  LexerOptions.scala  Location.scala  TokenPrettyPrinter.scala  Tokens.scala
src/main/scala/arcana/world/: ArgumentEvaluator.scala  ArgumentException.scala  Main.scala  Repl.scala  ReplMain.scala
src/test/al/: hello.al  lex-err.al  types.al
src/test/arc/: basic.arc  comments.arc
src/test/coq/: verify.v
src/test/scala/arcana/empress/: LexerTest.scala  TokenPrettyPrinter.scala
src/test/tokens/: basic.al.tokens  basic.arc.tokens  comments.arc.tokens  hello.arc.tokens  lex-err.arc.tokens  types.al.tokens
