opam-version: "2.0"
version: "dev"
maintainer: "Arcana Lisp Group"
synopsis: "Verification"

build: [
  ["sh" "-c" "coq_makefile -f _CoqProject -o Makefile"]
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: [make "test"]

depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.6")}
  "coq-mathcomp-ssreflect" {(>= "1.7.0")}
]

tags: [
]
